Fix squished video playback on firefox

--- a/src/frontend/public_html/css/playback.css
+++ b/src/frontend/public_html/css/playback.css
@@ -31,7 +31,6 @@
 
 #panel .img-container {
     width: 780px;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
